<resources>
    <string name="app_name">EComApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_slide">Choose Your Products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="description">Lorem Ipsum is simply dummy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailedDesc">it is a long established fact that a reader will be distracted
        by the readable content of a page when looking at its layout. The point of using Lorem Ipsum
        is that it has a more-or-less normal distribution of letters,
        as opposed to using \'Content here, content here\', making it look like readable English.</string>
</resources>